--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
         "@tailwindcss/typography": "^0.5.10",
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.0",
+        "esbuild": "^0.25.0",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^4",
-        "vite": "^5.0.0"
+        "vite": "^5.4.20"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.1",
